input box display modified in from.css And menu reset function is added

--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -4,10 +4,10 @@ body{
 	margin: 0px;
 	padding: 0px;
 }
-.container{
+.container-main{
 	position: relative;
 	height:100vh;
-	width:100%;
+	/*width:100%;*/
 	/*background: red;*/
 	padding-top: 50px;
 	overflow: auto;
