--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -9,7 +9,7 @@ body{
 	height:100vh;
 	/*width:100%;*/
 	/*background: red;*/
-	padding-top: 50px;
+	padding-top: 80px;
 	overflow: auto;
 }
 .task-bar{
@@ -219,7 +219,30 @@ body{
 	border-bottom: solid 1px rgba(54,55,58,1);
 }
 
+/*notification*/
 
+#page-notification{
+    position: fixed;
+    padding-left: 10px;
+    padding-right: 10px;
+    right: 0;
+    top: 50px;
+    width: 300px;
+    height: auto;
+    z-index: 10000;
+    /*background: rgba(0,0,0,.2);*/
+}
+#page-notification > div:nth-child(2){
+    /*margin-top: 65px;*/
+}
+#page-notification .alert{
+    margin:5px 0;
+}
+@media(max-width: 768px){
+    #page-notification{
+        /*padding-top: 10px;*/
+    }
+}
 
 	
 
