--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,10 +1,10 @@
-.form-control{
+.container .form-control,.container-fluid .form-control{
 	border-radius: 0px;
 	border: 3px solid #fff;
 	background: #f1f1f1;
 	box-shadow: none;
 }
-.form-control:focus{
+.container .form-control:focus,.container-fluid .form-control:focus{
 	border: 3px solid #fff;
 	background: #fff;
 	box-shadow: none;
@@ -19,9 +19,14 @@
 .btn:focus, .btn:active{
 	outline: none;
 }
-.input-group-addon{
+.container .input-group-addon,.container-fluid .input-group-addon{
 	border-radius: 0px;
 	border: 3px solid #fff;
+	border-left: none;
 	background: #f1f1f1;
 	box-shadow: none;
+}
+tr.selected,tr.selected:hover{
+    background: #47A447;
+    color:white;
 }
